--- a/app-web-shoppingcart/pom.xml
+++ b/app-web-shoppingcart/pom.xml
@@ -5,5 +5,7 @@
     <artifactId>app-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>pruebas</artifactId>
+  <artifactId>app-web-shoppingcart</artifactId>
+  <packaging>war</packaging>
+  <name>web shopping cart</name>
 </project>
